#
# some news ... see also TODO for hints
#

2016-04-19 -> start split of gui and daemon based on A20_SDK_V0.1.0