@@ -1,3 +1,0 @@
-#!/bin/bash
-
-find . -name "*~" -exec rm {} \;
