@@ -1,3 +1,0 @@
-#!/bin/bash
-
-git grep -I --name-only -z -e '' | xargs -0 sed -i 's/[ \t]\+\(\r\?\)$/\1/'
