@@ -84,7 +84,7 @@ device2:
 	}
 	root:
 	{
-		url = "http://sourceforge.net/projects/a20devices/files/bananapi/bananapi_rootfs.tgz";
+		url = "http://sourceforge.net/projects/a20devices/files/bananapi/baalue_rootfs.tgz";
 		path = "/opt/a20_sdk/images/bananapi_rootfs.tgz";
 	}
 	home:
@@ -236,5 +236,19 @@ external:
 	  name = "SDK builder"
 	  url = "https://github.com/tjohann/sdk_builder.git"
 	  path = "/opt/a20_sdk/external/sdk_builder"
+	}
+
+	repo7:
+	{
+	  name = "LCD 1602 driver"
+	  url = "http://github.com/tjohann/lcd160x_driver.git"
+	  path = "/opt/a20_sdk/external/lcd160x_driver"
+	}
+
+	repo8:
+	{
+	  name = "My driver examples"
+	  url = "http://github.com/tjohann/mydriver.git"
+	  path = "/opt/a20_sdk/external/mydriver"
 	}
 }
